--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px;">
-    Users: 
-    Bob - 1
+    <app-home></app-home>
 </div>
