--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Dating app</a>
      
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -15,7 +15,17 @@
             <a class="nav-link" href="#">Messages</a>
           </li>
         </ul>
-        <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+
+        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+          <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+          <div class="dropdown-menu mt-3" *dropdownMenu>
+            <a class="dropdown-item">Edit profile</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logOut()">Log out</a>
+          </div>  
+        </div>
+
+        <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" *ngIf="!(accountService.currentUser$ | async)">
           <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="search" placeholder="Search">
           <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password" placeholder="Password">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
