--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -2,3 +2,11 @@
 .dropdown-toggle, .dropdown-item {
     cursor: pointer;
 }
+
+img {
+    max-height: 50px;
+    border: 2px solid #fff;
+    display: inline;
+    margin-right: 10px;
+    border-radius: 50%;
+}
