--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
                 <button class="btn btn-primary" (click)="addLike(member)">
                     <i class="fa fa-heart"></i>
                 </button>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" routerLink="/members/{{member.username}}" [queryParams]="{tab: 3}">
                     <i class="fa fa-envelope"></i>
                 </button>
             </li>
