--- a/client/src/app/members/photo-editor/photo-editor.component.css
+++ b/client/src/app/members/photo-editor/photo-editor.component.css
@@ -12,3 +12,16 @@ input[type=file] {
     color: transparent;
     text-shadow: none !important;
 }
+
+.not-approved {
+    opacity: 0.2;
+}
+
+.img-wrapper {
+    position: relative;
+}
+
+.img-text {
+    position: absolute;
+    bottom: 30%;
+}
