--- a/client/src/app/admin/user-managment/user-managment.component.html
+++ b/client/src/app/admin/user-managment/user-managment.component.html
@@ -1,17 +1,22 @@
 <div class="row">
     <table class="table">
-        <tr>
-            <th style="width: 30%;">Username</th>
-            <th style="width: 40%;">Active roles</th>
-            <th style="width: 30%;"></th>
-        </tr>
+        <thead>
+            <tr>
+                <th style="width: 30%;">Username</th>
+                <th style="width: 40%;">Active roles</th>
+                <th style="width: 30%;"></th>
+            </tr>
+        </thead>
 
-        <tr *ngFor="let user of users">
-            <td>{{user.username}}</td>
-            <td>{{user.roles}}</td>
-            <td>
-                <button class="btn btn-outline-info" (click)="openRolesModal(user)">Edit roles</button>
-            </td>
-        </tr>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{user.username}}</td>
+                <td>{{user.roles}}</td>
+                <td>
+                    <button class="btn btn-outline-info" (click)="openRolesModal(user)">Edit roles</button>
+                </td>
+            </tr>
+        </tbody>
+        
     </table>
 </div>
