--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your match</h1>
         <p class="lead">Come on in to view your matches... All you needto do is to sign up!</p>
         <div class="text-center">
-            <button (click)="registerToggle();" type="button" class="btn btn-primary btn-lg mr-2">Register</button>
+            <button (click)="registerToggle();" type="button" class="btn btn-primary btn-lg me-2">Register</button>
             <button type="button" class="btn btn-info btn-lg">Learn more</button>
         </div>
     </div>
