--- a/client/src/app/members/members-detail/members-detail.component.html
+++ b/client/src/app/members/members-detail/members-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-4">
-        <div class="card">
+        <div class="card" #userCard>
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" 
                 class="card-img-top img-thumbnail">
             <div class="card-body">
@@ -52,7 +52,7 @@
             </tab>
 
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages [username]="member.username"></app-member-messages>
+                <app-member-messages [username]="member.username" [userInfoHeight]="userCard.offsetHeight"></app-member-messages>
             </tab>
         </tabset>
     </div>
