--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,18 +1,18 @@
 <div class="row">
-    <div class="col-2" *ngFor="let photo of member.photos">
+    <div class="col-2 d-flex flex-column" style="position: relative;" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1" [class.not-approved]="!photo.isApproved">
 
         <div class="text-center img-text" *ngIf="!photo.isApproved">
             <span class="text-danger">Awaiting approval</span>
         </div>
 
-        <div class="text-center">
-            <button class="btn btn-sm" [disabled]="photo.isMain || !photo.isApproved"
+        <div class="d-flex">
+            <button class="btn btn-sm flex-grow-1" [disabled]="photo.isMain || !photo.isApproved"
                     (click)="setMainPhoto(photo);"
                     [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'>
                 Main
             </button>
-            <button class="btn btn-sm btn3-danger"
+            <button class="btn btn-sm btn3-danger flex-grow-1"
                     [disabled]="photo.isMain"
                     (click)="deletePhoto(photo.id)"><i class="fa fa-trash"></i></button>
         </div>
