--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
       <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating app</a>
      
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav me-auto">
           <ng-container *ngIf="accountService.currentUser$ | async">
             <li class="nav-item">
               <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
@@ -19,14 +19,14 @@
               <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin</a>
             </li>
           </ng-container>   
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
-          </li>       
+          </li>        -->
         </ul>
 
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
-          <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{(user.knownAs || user.username) | titlecase}}</a>
+          <a class="dropdown-toggle text-light ms-2 text-decoration-none" dropdownToggle>Welcome {{(user.knownAs || user.username) | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
             <div class="dropdown-divider"></div>
@@ -34,12 +34,12 @@
           </div>  
         </div>
 
-        <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" *ngIf="!(accountService.currentUser$ | async)">
-          <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="search" placeholder="Search">
-          <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password" placeholder="Password">
-          <button class="btn btn-info my-2 my-sm-0" type="submit">Log in</button>
+        <form #loginForm="ngForm" class="d-flex mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" *ngIf="!(accountService.currentUser$ | async)">
+          <input name="username" [(ngModel)]="model.username" class="form-control me-sm-2" type="search" placeholder="Search">
+          <input name="password" [(ngModel)]="model.password" class="form-control me-sm-2" type="password" placeholder="Password">
+          <button class="btn btn-info my-2 my-sm-0" type="submit">LogIn</button>
         </form>
-    </div>
+    <!-- </div> -->
 
   </div>
 </nav>
