--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,13 +3,13 @@
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
 
-    <div class="form-group">
-        <label class="control-label" style="margin-right: 10px0;">I am a: </label>
-        <label class="radio-inline">
-            <input type="radio" value="male" formControlName="gender" class="ml-3 mr-1">Male
+    <div class="mb-3">
+        <label style="margin-right: 10px0;">I am a: </label>
+        <label class="form-check-label">
+            <input type="radio" value="male" formControlName="gender" class="ms-3 me-1 form-check-input">Male
         </label>
-        <label class="radio-inline"> 
-            <input type="radio" value="female" formControlName="gender" class="ml-3 mr-1">Female
+        <label class="form-check-label"> 
+            <input type="radio" value="female" formControlName="gender" class="ms-3 me-1 form-check-input">Female
         </label>
     </div>
 
